--- a/sabjee.html
+++ b/sabjee.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+
+
+
+
+
+
 	<title>Sabjee</title>
 	 <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,10 +16,25 @@
 	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="stylesab.css">
 </head>
-<body>
-<h1 class="text-uppercase"><strong>Welcome to your Sabjee wala</strong></h1>
+
+<body background="d2.jfif">
+
+
+	<div class="container">
+		<div class="row">
+			<header class="text-center col-12"><br>
+<h1 class=""><strong>Welcome to SAbjee!</strong></h1>
+<h4>Fresh vegetables at your door step</h4>
+</header>
+<div class="buffer col-12"></div>
+<section class="text-center col-12">
 <hr>
-<a href="https://mailchi.mp/83145705805a/sabjee"><button class="btn btn-primary btn-xl">Lets Explore!</button>
-</a>
+
+<a href="LAyout.html"><button class="btn btn-primary btn-xl">Lets Explore!</button></a>
+</section>
+</div>
+</div>
+
+
 </body>
 </html>
