--- a/LAyout.html
+++ b/LAyout.html
@@ -13,7 +13,7 @@
   <li><a href="">Our Offerings</a></li>
   <li><a href="formm.html">Login</a></li>
   <!-- LOGO -->
-  <li class="push"><a href="sabjee.html">SAbjee!</a></li>
+  <li class="push"><a href="index.html">SAbjee!</a></li>
   <li class="push"><i class="fa fa-search"></li></i>
   <li class="push"><i class="fa fa-shopping-cart"><a href=""> Cart </a></li></i>
 </ul>
